Fixing double scroll-bar 9

--- a/introduction.css
+++ b/introduction.css
@@ -730,7 +730,7 @@ ul li .descr::before {
   align-items: center;
   justify-content: space-between;
   display: grid;
-  margin: 1rem;
+  margin: 2rem;
   grid-template-columns: 5fr 1fr;
   gap: 30px;
   width: 100vw;
